Added link to bottom of the page

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
                 <div class="name">
                     <p>
-                        Coded by Lucy Noble
+                        <a href="https://github.com/lucynoble2/weather-app"> Open Source Code </a> by Lucy Noble
                     </p>
                 </div>
             </div>
