added main icon to html and css

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
                 <h1 id="main-city">
                     Type in a city name
                 </h1>
-                <h2 class="temperature"> <span id="temperature"> Temp Display</span></span>
+                <h2 
+                    class="temperature"> <span id="temperature"> Temp Display</span></span>
                 </h2>
+                <i class="fas fa-cloud"> </i>
                 <button>
                     Current Location
                 </button>
