working on wind and humidity

--- a/index.html
+++ b/index.html
@@ -25,16 +25,24 @@
                 <h3 id="todays-date">
                     Sunday 10:00
                 </h3>
-                <h4>
+                <h4 id="description">
                     Mostly Sunny
                 </h4>
+                <h4>
+                    Wind Speed: <span id="wind"></span>km/h
+                </h4>
+                <h4>
+                    Humidity: <span id="humidity"></span>%
+                </h4>
                 <h1 id="main-city">
-                    Type in a city name
+                    Charleston
                 </h1>
                 <h2 
-                    class="temperature"> <span id="temperature"> Temp Display</span></span>
+                    class="temperature"> <span id="temperature"> 56° F|C </span></span>
                 </h2>
-                <i class="fas fa-cloud"> </i>
+                <p class="text-center">
+                    <i class="fas fa-cloud"> </i>
+                </p>
                 <button>
                     Current Location
                 </button>
