--- a/index.html
+++ b/index.html
@@ -22,18 +22,22 @@
     <div class="container">
         <div class="card">
             <div class="p-3 bg-primary text-white">
+                <div class="left">
                 <h3 id="todays-date">
                     Sunday 10:00
                 </h3>
                 <h4 id="description">
                     Mostly Sunny
                 </h4>
+                </div>
+                <div class="right">
                 <h4>
                     Wind Speed: <span id="wind"></span>km/h
                 </h4>
                 <h4>
                     Humidity: <span id="humidity"></span>%
                 </h4>
+                </div>
                 <h1 id="main-city">
                     Charleston
                 </h1>
