updating icon element

--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
                 <h2 
                     class="temperature"> <span id="temperature"> 56° F|C </span></span>
                 </h2>
-                <p class="text-center">
-                    <i class="fas fa-cloud"> </i>
+                <p class="text-center"> 
+                    <i id="icon" class="fas fa-cloud"> </i> 
                 </p>
                 <button>
                     Current Location
