fixing icon element

--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
                     Charleston
                 </h1>
                 <h2 
-                    class="temperature"> <span id="temperature"> 56° F|C </span></span>
+                    class="temperature"> 
+                    <strong id="temperature"> 56°</strong>
+                    <span class = "units"> °C | <a href="#" °F ></a></span>
                 </h2>
                 <p class="text-center"> 
                     <i id="icon" class="fas fa-cloud"> </i> 
