working on unit conversion

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
                 </h1>
                 <h2 
                     class="temperature"> 
-                    <strong id="temperature"> 56°</strong>
-                    <span class = "units"> °C | <a href="#" °F ></a></span>
+                    <strong id="temperature"></strong>
+                    <span class = "units"
+                    ><a href="#" id="celsius-link"> °C</a> |
+                    <a href="#" id="fahrenheight-link"> °F</a></span>
                 </h2>
                 <p class="text-center"> 
                     <i id="icon" class="fas fa-cloud"> </i> 
