--- a/index.html
+++ b/index.html
@@ -38,15 +38,13 @@
                     Humidity: <span id="humidity"></span>%
                 </h4>
                 </div>
-                <h1 id="main-city">
-                    Charleston
-                </h1>
+                <h1 id="main-city"></h1>
                 <h2 
                     class="temperature"> 
                     <strong id="temperature"></strong>
                     <span class = "units"
                     ><a href="#" id="celsius-link"> °C</a> |
-                    <a href="#" id="fahrenheight-link"> °F</a></span>
+                    <a href="#" id="fahrenheiht-link"> °F</a></span>
                 </h2>
                 <p class="text-center"> 
                     <i id="icon" class="fas fa-cloud"> </i> 
@@ -61,7 +59,7 @@
                 </button>
                 <div class="name">
                     <p>
-                        <a href="https://github.com/lucynoble2/weather-app">Open Source Code</a> by Lucy Noble
+                        <a href="https://github.com/lucynoble2/weather-app" id="open-source">Open Source Code</a> by Lucy Noble
                     </p>
                 </div>
             </div>
