--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </div>
                 <div class="right">
                 <h4>
-                    Wind Speed: <span id="wind"></span>km/h
+                    Wind Speed: <span id="wind"></span> km/h
                 </h4>
                 <h4>
                     Humidity: <span id="humidity"></span>%
@@ -44,7 +44,7 @@
                     <strong id="temperature"></strong>
                     <span class = "units"
                     ><a href="#" id="celsius-link"> °C</a> |
-                    <a href="#" id="fahrenheiht-link"> °F</a></span>
+                    <a href="#" id="fahrenheit-link"> °F</a></span>
                 </h2>
                 <p class="text-center"> 
                     <i id="icon" class="fas fa-cloud"> </i> 
